dynamic-mod-rust/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: envoy.filters.http.dynamic_modules
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
              dynamic_module_config:
                # Loads `libdynamic_mod_rust.so` from `ENVOY_DYNAMIC_MODULES_SEARCH_PATH`.
                name: dynamic_mod_rust
              # The name of the filter to instantiate, as dispatched by the module's
              # `new_http_filter_config_fn`.
              filter_name: response_mutation
              # The configuration passed to the filter - a `google.protobuf.Struct` is
              # received by the module as JSON.
              filter_config:
                "@type": type.googleapis.com/google.protobuf.Struct
                value:
                  response_header_name: x-dynamic-module
                  response_header_value: FOO
                  response_body_suffix: "Hello from the Rust dynamic module\n"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: web_service
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web_service
                port_value: 8080
